--- a/My Book/Base.lproj/Main.storyboard
+++ b/My Book/Base.lproj/Main.storyboard
@@ -20,12 +20,12 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="128"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search here and use filters below!" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9F6-jh-u4W">
-                                        <rect key="frame" x="35" y="20" width="215" height="34"/>
+                                        <rect key="frame" x="35" y="20" width="205" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="R8X-E7-eDz">
-                                        <rect key="frame" x="35" y="74" width="215" height="32"/>
+                                        <rect key="frame" x="35" y="74" width="205" height="32"/>
                                         <segments>
                                             <segment title="Page Count"/>
                                             <segment title="Ave. Rating"/>
@@ -34,15 +34,15 @@
                                             <action selector="searchByFilterSegment:" destination="BYZ-38-t0r" eventType="valueChanged" id="tbQ-Jf-ebo"/>
                                         </connections>
                                     </segmentedControl>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OAl-jG-G9N">
-                                        <rect key="frame" x="339" y="44" width="40" height="40"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IyP-Zc-fqr">
+                                        <rect key="frame" x="255" y="22" width="50" height="50"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="40" id="RNF-dT-NWp"/>
-                                            <constraint firstAttribute="width" secondItem="OAl-jG-G9N" secondAttribute="height" id="bDa-OT-emh"/>
+                                            <constraint firstAttribute="width" secondItem="IyP-Zc-fqr" secondAttribute="height" id="3Bh-d6-7I4"/>
+                                            <constraint firstAttribute="width" constant="50" id="PTY-yV-z03"/>
                                         </constraints>
                                         <state key="normal" title="Button"/>
                                         <connections>
-                                            <action selector="changeSearchStyleButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XmI-eo-Z7u"/>
+                                            <action selector="changeSearchButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="GEL-ie-fJb"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -51,13 +51,13 @@
                                     <constraint firstItem="R8X-E7-eDz" firstAttribute="height" secondItem="9F6-jh-u4W" secondAttribute="height" multiplier="0.911765" id="0pG-cX-Ibx"/>
                                     <constraint firstItem="9F6-jh-u4W" firstAttribute="top" secondItem="2r3-8z-VUc" secondAttribute="top" constant="20" id="Ds1-bg-A2c"/>
                                     <constraint firstAttribute="height" constant="128" id="Gl5-dD-8yt"/>
-                                    <constraint firstItem="OAl-jG-G9N" firstAttribute="leading" secondItem="9F6-jh-u4W" secondAttribute="trailing" constant="15" id="H5x-MX-Ni5"/>
+                                    <constraint firstAttribute="trailing" secondItem="IyP-Zc-fqr" secondAttribute="trailing" constant="15" id="JUU-Ks-XX5"/>
+                                    <constraint firstItem="IyP-Zc-fqr" firstAttribute="top" secondItem="2r3-8z-VUc" secondAttribute="top" constant="22" id="KhD-FQ-Yld"/>
                                     <constraint firstItem="R8X-E7-eDz" firstAttribute="top" secondItem="9F6-jh-u4W" secondAttribute="bottom" constant="20" id="PA9-nJ-RUo"/>
-                                    <constraint firstItem="OAl-jG-G9N" firstAttribute="top" secondItem="2r3-8z-VUc" secondAttribute="top" constant="45" id="VgM-b9-tQa"/>
                                     <constraint firstItem="9F6-jh-u4W" firstAttribute="leading" secondItem="2r3-8z-VUc" secondAttribute="leading" constant="35" id="sKU-ba-rbb"/>
                                     <constraint firstItem="R8X-E7-eDz" firstAttribute="width" secondItem="9F6-jh-u4W" secondAttribute="width" id="tbI-Qz-4HD"/>
-                                    <constraint firstAttribute="trailing" secondItem="OAl-jG-G9N" secondAttribute="trailing" constant="15" id="v5e-ra-FXT"/>
                                     <constraint firstItem="R8X-E7-eDz" firstAttribute="leading" secondItem="2r3-8z-VUc" secondAttribute="leading" constant="35" id="vIs-sT-ZnT"/>
+                                    <constraint firstItem="IyP-Zc-fqr" firstAttribute="leading" secondItem="9F6-jh-u4W" secondAttribute="trailing" constant="15" id="wMr-Ds-vIg"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="41i-yl-oN7">
@@ -80,13 +80,14 @@
                     <tabBarItem key="tabBarItem" title="Search" id="91G-rn-YYu"/>
                     <connections>
                         <outlet property="bookListTableView" destination="41i-yl-oN7" id="uEW-Pk-Tt3"/>
-                        <outlet property="changeSearchStyleButtonOutlet" destination="OAl-jG-G9N" id="f2i-iX-TF9"/>
+                        <outlet property="changeSearchButton" destination="IyP-Zc-fqr" id="uzi-H9-PFW"/>
                         <outlet property="searchTexField" destination="9F6-jh-u4W" id="Oyx-xo-WSi"/>
+                        <outlet property="segmentState" destination="R8X-E7-eDz" id="GZj-uz-Vgx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1026.1538461538462" y="78.909952606635073"/>
+            <point key="canvasLocation" x="1025.625" y="78.16901408450704"/>
         </scene>
         <!--Favorite-->
         <scene sceneID="dVH-L8-lG5">
