--- a/My Book/Base.lproj/Main.storyboard
+++ b/My Book/Base.lproj/Main.storyboard
@@ -30,6 +30,7 @@
                                             <segment title="Page Count"/>
                                             <segment title="Ave. Rating"/>
                                         </segments>
+                                        <color key="tintColor" red="0.95343607659999996" green="0.94294714930000001" blue="0.8343961835" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
                                             <action selector="searchByFilterSegment:" destination="BYZ-38-t0r" eventType="valueChanged" id="tbQ-Jf-ebo"/>
                                         </connections>
@@ -46,7 +47,7 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemYellowColor"/>
+                                <color key="backgroundColor" red="0.80948489899999998" green="0.89985781909999996" blue="0.81304615739999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="R8X-E7-eDz" firstAttribute="height" secondItem="9F6-jh-u4W" secondAttribute="height" multiplier="0.911765" id="0pG-cX-Ibx"/>
                                     <constraint firstItem="9F6-jh-u4W" firstAttribute="top" secondItem="2r3-8z-VUc" secondAttribute="top" constant="20" id="Ds1-bg-A2c"/>
@@ -151,9 +152,6 @@
         </systemColor>
         <systemColor name="systemTealColor">
             <color red="0.35294117647058826" green="0.78431372549019607" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemYellowColor">
-            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
