--- a/My Book/Storyboard/Base.lproj/Main.storyboard
+++ b/My Book/Storyboard/Base.lproj/Main.storyboard
@@ -215,7 +215,7 @@
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AuthorName AuthorName AuthorName AuthorName" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AGV-j5-gG4">
                                                 <rect key="frame" x="17" y="405.66666666666663" width="356" height="52"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="52" id="pY3-M3-ahU"/>
+                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="52" id="pY3-M3-ahU"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
@@ -238,7 +238,7 @@
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ATt-Nf-uAU">
                                                 <rect key="frame" x="17" y="271" width="356" height="84.666666666666686"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="84.666666666666686" id="OjG-jy-xec"/>
+                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="OjG-jy-xec"/>
                                                 </constraints>
                                                 <string key="text">downloadLink Data downloadLink Data downloadLink DatadownloadLink Data downloadLink Data downloadLink DatadownloadLink Data downloadLink Data downloadLink Data</string>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -357,7 +357,7 @@
                                             <constraint firstItem="ATt-Nf-uAU" firstAttribute="leading" secondItem="sjl-Vf-SLe" secondAttribute="leading" constant="17" id="i49-B6-qEf"/>
                                             <constraint firstItem="AGV-j5-gG4" firstAttribute="top" secondItem="cZJ-Ml-g7q" secondAttribute="bottom" constant="10" id="iNt-5G-2sz"/>
                                             <constraint firstItem="Mau-2E-krg" firstAttribute="leading" secondItem="sjl-Vf-SLe" secondAttribute="leading" constant="17" id="irf-Av-F9a"/>
-                                            <constraint firstItem="K6w-14-5Dl" firstAttribute="top" secondItem="AGV-j5-gG4" secondAttribute="bottom" constant="24" id="jWf-Oh-6Gn"/>
+                                            <constraint firstItem="K6w-14-5Dl" firstAttribute="top" relation="greaterThanOrEqual" secondItem="AGV-j5-gG4" secondAttribute="bottom" constant="24" id="jWf-Oh-6Gn"/>
                                             <constraint firstItem="t70-wC-CmA" firstAttribute="leading" secondItem="sjl-Vf-SLe" secondAttribute="leading" constant="17" id="jmb-6k-odY"/>
                                             <constraint firstItem="cZJ-Ml-g7q" firstAttribute="top" secondItem="ATt-Nf-uAU" secondAttribute="bottom" constant="17" id="mDW-Qz-wxb"/>
                                             <constraint firstItem="9K2-9z-tFQ" firstAttribute="leading" secondItem="sjl-Vf-SLe" secondAttribute="leading" constant="17" id="mWl-jm-c07"/>
@@ -394,7 +394,7 @@
                         <constraints>
                             <constraint firstItem="Jp1-aA-kzF" firstAttribute="top" secondItem="4Cv-ch-48W" secondAttribute="top" id="9nn-QL-63c"/>
                             <constraint firstItem="Jp1-aA-kzF" firstAttribute="width" secondItem="Xrs-S0-IMN" secondAttribute="width" id="CVj-30-lDL"/>
-                            <constraint firstItem="4Cv-ch-48W" firstAttribute="bottom" secondItem="K6w-14-5Dl" secondAttribute="bottom" constant="10.333333333333371" id="QzR-z8-fMc"/>
+                            <constraint firstItem="4Cv-ch-48W" firstAttribute="bottom" secondItem="K6w-14-5Dl" secondAttribute="bottom" constant="10.33" id="QzR-z8-fMc"/>
                             <constraint firstItem="Jp1-aA-kzF" firstAttribute="width" secondItem="Xrs-S0-IMN" secondAttribute="width" id="aMH-ZE-PPv"/>
                             <constraint firstItem="Jp1-aA-kzF" firstAttribute="bottom" secondItem="4Cv-ch-48W" secondAttribute="bottom" constant="34" id="bWD-Lc-Jk8"/>
                             <constraint firstItem="Jp1-aA-kzF" firstAttribute="leading" secondItem="4Cv-ch-48W" secondAttribute="leading" id="cVQ-bf-Rpj"/>
